tdf#105075 Firebird: Support Limit of query_GUI

Firebird uses "SELECT FIRST <num> ..." format to limit the number of
result row numbers instead of "SELECT ... LIMIT <num>"

My first approach was to improve OSQLParser and make it understand the
Firebird dialect. But it is hard because the parser has hard-coded
getChild(int) calls all over the code and all the indexes should be
updated.

Instead of this, we recognise the LIMIT keyword with the parser, remove
it and push the FIRST <num> part manually right after SELECT.

All of this should happen in case of Firebird and only when using the
query-GUI.

Change-Id: I53f3f977f77cf98b91b25a7eaa6ebb2ee8ac0951